# idea-pipeline

./: .gitignore  .mcp.json  CLAUDE.md  FULL_REPORT.md  LEADERBOARD.md  LEADERBOARD_T3.md  LEADERBOARD_T4.md  LEADERBOARD_V2_1.md  README.md  VALIDATION_STATUS.md  handoff.txt  pyproject.toml
config/: sources.yaml  tiers.yaml  weights.yaml
config/prompts/generate/: bottleneck_analysis.txt  domain_research_t2.txt  idea_candidates.txt
config/prompts/v1/: enrich_chances.txt  generate_chances.txt  link_wissen.txt  report_insights_synthesis.txt  report_meta_synthesis.txt  research_t1_extract.txt  research_t2_claude_search.txt  research_t2_claude_ws.txt  research_t2_extract.txt  research_t2_extract_v2.txt  research_t3_perplexity.txt  research_t5_loop.txt  umbrella_links.txt
docs/idea-exports/: README.md  balkongarten_systeme.md  high_performance_mulch.md  hyphen_produktion.md  insekten_basierte_supplements.md  mikrobiologisches_omega3.md  pilzkrankheits_fruhwarnung.md
idea-pipeline/: .gitignore  CLAUDE.md  HANDOFF.md
idea-pipeline/config/: weights.yaml
idea-pipeline/src/idea_pipeline/: cli.py  (+4 more)
reports/: t2_review_2026-04-19.md  t3_review_2026-04-20.md  t4_review_2026-04-20.md  v1_vs_v2_1_comparison_2026-04-19.md
src/idea_pipeline/: __init__.py  cli.py  enrich.py  enrich_intrinsic.py  generator.py  link.py  report.py  schemas.py  scoring.py  scoring_v1.py  settings.py  vault_io.py
tests/: test_generator.py  test_report_insights.py  test_report_structure.py  test_schema_v21.py  test_scoring_v21.py  test_sources.py
vault-templates/_templates/: idee.md  wissen.md
(+21 files in other folders)
